2010-08-30  Eric Blake  <eblake@redhat.com>

	Simplify recent configure quoting portability workaround.
	* configure.ac: Simplify setting of timestamp_string.

2010-08-30  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Update path conversion warning messages
	* libltdl/config/ltmain.m4sh (func_convert_file_check): Update
	comments and warning message.
	(func_convert_path_check): Update warning message.

2010-08-29  Peter Rosin  <peda@lysator.liu.se>

	Fix typo when renaming path conversion functions.
	* tests/testsuite.at: Ensure to_host_file_cmd is passed as a
	variable setting on the configure line for (new testsuite) tests.

2010-08-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Work around yet another shell quoting portability issue.
	* configure.ac: Avoid nonportable quoted alternate variable
	value in unquoted here document, so Solaris 10 sh and Tru64
	ksh do not print spurious extra quotes.

	Silence order-only configure test for AIX make.
	* configure.ac: Also drop standard output, for AIX 5.1 make.

2010-08-28  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Minor sysroot fixups.
	* libltdl/m4/libtool.m4 (_LT_WITH_SYSROOT): Fix typo.
	* tests/sysroot.at: Search also for crt0.o to accommodate cygwin.

2010-08-28  Charles Wilson  <libtool@cwilson.fastmail.fm>

	[cygwin|mingw|cross-compile]: Path conversion support.
	* configure.ac: Ensure to_host_file_cmd is available to Makefile.
	* TODO: Document QoI issue with file name conversion functions.
	* libltdl/m4/libtool.m4 (_LT_PATH_CONVERSION_FUNCTIONS): New function
	sets libtool variable $to_host_file_cmd, and employs cache.
	(_LT_SETUP): Require it.
	* tests/testsuite.at: Ensure to_host_file_cmd is passed as a
	variable setting on the configure line for (new testsuite) tests.
	* Makefile.am (TESTS_ENVIRONMENT): Ensure to_host_file_cmd is
	included so that it is passed to (old testsuite) tests.
	* libltdl/config/general.m4sh: Define $lt_sed_naive_backslashify here.